# TruePBR-Manager

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_zh.md  SPEC.md  build.bat  builddebug.bat  buildrelease.bat  vcpkg.json
.github/workflows/: auto-tag.yml  ci.yml  release.yml
docs/: D3D12_REWRITE_PLAN.md
resources/: resources.qrc
resources/icons/: placeholder.txt
scripts/: bump_version.py
src/: CMakeLists.txt  Version.h.in  main.cpp
src/app/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h
src/core/: AppSettings.cpp  AppSettings.h  ChannelPacker.cpp  ChannelPacker.h  JsonExporter.cpp  JsonExporter.h  LandscapeExporter.cpp  LandscapeExporter.h  ModExporter.cpp  ModExporter.h  ModImporter.cpp  ModImporter.h  PBRTextureSet.cpp  PBRTextureSet.h  Project.cpp  Project.h  TextureImporter.cpp  TextureImporter.h  TextureSetValidator.cpp  TextureSetValidator.h  TranslationManager.cpp  TranslationManager.h  VanillaConverter.cpp  VanillaConverter.h
src/renderer/: D3D12Renderer.cpp  D3D12Renderer.h  D3D12UploadQueue.cpp  D3D12UploadQueue.h  DescriptorHeap.cpp  DescriptorHeap.h  IBLBrdfLut.hlsl  IBLCubemapMipGen.hlsl  IBLDiffuseIrradiance.hlsl  IBLEquirectToCube.hlsl  IBLIrradiance.hlsl  IBLPipeline.cpp  IBLPipeline.h  IBLPrefilter.hlsl  IBLProcessor.cpp  IBLProcessor.h  IBLProjectSH.hlsl  IBLReduceSH.hlsl  MeshGenerator.cpp  MeshGenerator.h  PBRShader.hlsl  SkyboxShader.hlsl  TAAResolve.hlsl  ToneMapShader.hlsl
src/renderer/Common/: BRDF.hlsli  ColorSpaces.hlsli  GT7ToneMap.hlsli  Math.hlsli  PBR.hlsli  PBRMath.hlsli  Random.hlsli  Shading.hlsli
src/renderer/Common/Glints/: Glints2023.hlsli
src/ui/: ConversionFlowWidget.cpp  ConversionFlowWidget.h  ExportDialog.cpp  ExportDialog.h  FeatureTogglePanel.cpp  FeatureTogglePanel.h  ImportDialog.cpp  ImportDialog.h  MaterialPreviewWidget.cpp  MaterialPreviewWidget.h  ParameterPanel.cpp  ParameterPanel.h  SlotEditorWidget.cpp  SlotEditorWidget.h  TexturePreviewWidget.cpp  TexturePreviewWidget.h  TextureSetPanel.cpp  TextureSetPanel.h  VanillaConversionDialog.cpp  VanillaConversionDialog.h
src/utils/: DDSUtils.cpp  DDSUtils.h  FileUtils.cpp  FileUtils.h  ImageUtils.cpp  ImageUtils.h  Log.cpp  Log.h  TextureCache.cpp  TextureCache.h
tests/: CMakeLists.txt  test_ModImporter.cpp  test_PBRTextureSet.cpp  test_Project.cpp  test_TextureSetValidator.cpp  test_VanillaConverter.cpp
translations/: en.json  zh_CN.json
